--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "@prisma/client": "^6.19.1",
     "@vercel/blob": "^2.0.0",
     "canvas": "^3.2.1",
+    "html2canvas": "^1.4.1",
+    "html2pdf.js": "^0.14.0",
+    "jspdf": "^4.0.0",
     "next": "^16.1.1",
     "openai": "^6.10.0",
     "pdf-parse": "^1.1.4",
